- fixed header icon rendering

--- a/src/app/component/header/search/header-search.component.html
+++ b/src/app/component/header/search/header-search.component.html
@@ -18,13 +18,14 @@
       />
     </div>
 
-    <div class="col-2">
+    <div class="col-2 search__iconWrapper">
       <img
-        class="search--icon"
+        class="header--icon"
         src="assets/images/search-icon.png"
         (click)="isSearchFieldActive = true"
       />
       <img
+        class="header--icon"
         src="assets/images/wishlist-selected.svg"
         [routerLink]="['/wishlist']"
       >
