--- a/src/app/component/header/search/header-search.component.scss
+++ b/src/app/component/header/search/header-search.component.scss
@@ -1,4 +1,12 @@
 
+.header {
+    &--icon {
+      height: 70%;
+      position: relative;
+      top: 25%;
+    }
+}
+
 .search {
     display: inline-block;
     position: absolute;
@@ -7,14 +15,14 @@
     top: 17px;
     width: 27px;
 
+    &__iconWrapper {
+      display: inline-flex;
+      height: 8vh;
+    }
+
     &--active {
       right: 15px;
     }
-
-    &--icon {
-      width: 100%;
-    }
-
 }
 
 .searchContainer {
@@ -25,7 +33,9 @@
     height: inherit;
     min-height: 30px;
     padding: 8px;
+    position: relative;
     transition: all .2s ease;
+    top: 5%;
     outline: none;
 
     &:focus {
@@ -67,8 +77,12 @@
     }
 
     &Back {
+      height: 8vh;
+
       &--icon {
-        width: 100%;
+        height: 70%;
+        position: relative;
+        top: 25%;
       }
     }
   }
