--- a/src/app/component/header/search/header-search.component.scss
+++ b/src/app/component/header/search/header-search.component.scss
@@ -35,7 +35,6 @@
     padding: 8px;
     position: relative;
     transition: all .2s ease;
-    top: 5%;
     outline: none;
 
     &:focus {
@@ -57,8 +56,7 @@
     border: 0;
     border-bottom: 2px solid #4AA7EB;
     display: block;
-    position: relative;
-    top: -2.5vh;
+    top: -0.5vh;
     width: 100%;
 
     &:focus {
@@ -68,7 +66,7 @@
       caret-color: #FFF;
       left: -2%;
       outline: none;
-      width: 105%;
+      width: 103%;
 
     }
 
@@ -78,6 +76,7 @@
 
     &Back {
       height: 8vh;
+      text-align: end;
 
       &--icon {
         height: 70%;
