--- a/src/app/component/header/search/header-search.component.html
+++ b/src/app/component/header/search/header-search.component.html
@@ -2,11 +2,13 @@
   <div class="row">
 
     <div class="col-3 col-md-2 {{ isSearchFieldActive ? 'searchContainer__inputFieldBack' : 'searchContainer--inactive' }}">
-      <img
-        class="searchContainer__inputFieldBack--icon"
-        src="assets/images/back-arrow.png"
-        (click)="isSearchFieldActive = false"
-      />
+      <div class="header__iconWrapper">
+        <img
+          class="header--icon"
+          src="assets/images/back-arrow.png"
+          (click)="isSearchFieldActive = false"
+        />
+      </div>
     </div>
     <div class="col-6 col-md-8">
       <input
@@ -19,16 +21,20 @@
     </div>
 
     <div class="col-3 col-md-2 search__iconWrapper">
-      <img
-        class="header--icon"
-        src="assets/images/search-icon.png"
-        (click)="isSearchFieldActive = true"
-      />
-      <img
-        class="header--icon"
-        src="assets/images/wishlist-selected.svg"
-        [routerLink]="['/wishlist']"
-      >
+      <div class="header__iconWrapper">
+        <img
+          class="header--icon"
+          src="assets/images/search-icon.png"
+          (click)="isSearchFieldActive = true"
+        />
+      </div>
+      <div class="header__iconWrapper">
+        <img
+          class="header--icon"
+          src="assets/images/wishlist-selected.svg"
+          [routerLink]="['/wishlist']"
+        >
+      </div>
     </div>
 
   </div>
