--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -1,84 +1,15 @@
 .informationItem {
   border-bottom: solid 1px #071436;
   display: inline-block;
-  min-height: 400px;
-  min-width: 279px;
+  max-width: 15em;
+  min-width: 15em;
+  min-height: 20em;
   padding-bottom: 28px;
   padding-top: 28px;
   position: relative;
   overflow: hidden;
   text-align: center;
   vertical-align: top;
-
-  @media screen and (min-width: 320px) {
-    min-width: 159px;
-  }
-
-  @media screen and (min-width: 360px) {
-    min-width: 179px;
-  }
-
-  @media screen and (min-width: 375px) {
-    min-width: 187px;
-  }
-
-  @media screen and (min-width: 411px) {
-    min-width: 205px;
-  }
-
-  @media screen and (min-width: 414px) {
-    min-width: 206px;
-  }
-
-  @media screen and (min-width: 540px) {
-    border-left: solid 1px #071436;
-    min-width: 179px;
-  }
-
-  @media screen and (min-width: 568px) {
-    min-width: 283px;
-  }
-
-  @media screen and (min-width: 592px) {
-    min-width: 295px;
-  }
-
-  @media screen and (min-width: 640px) {
-    min-width: 319px;
-  }
-
-  @media screen and (min-width: 653px) {
-    min-width: 325px;
-  }
-
-  @media screen and (min-width: 667px) {
-    min-width: 332px;
-  }
-
-  @media screen and (min-width: 720px) {
-    min-width: 239px;
-  }
-
-  @media screen and (min-width: 731px) {
-    border-left: solid 1px #071436;
-    min-width: 242px;
-  }
-
-  @media screen and (min-width: 736px) {
-    min-width: 244px;
-  }
-
-  @media screen and (min-width: 768px) {
-    min-width: 255px;
-  }
-
-  @media screen and (min-width: 812px) {
-    min-width: 269px;
-  }
-
-  @media screen and (min-width: 823px) {
-    min-width: 273px;
-  }
 
   @media screen and (min-width: 1024px) {
     border-bottom: unset;
@@ -114,14 +45,7 @@
 
   &__image {
     border-radius: 10px;
-    max-width: 120px;
-    max-height: 192px;
-    min-width: 60px;
-
-    @media screen and (min-width: 640px) {
-      max-width: 143px;
-      max-height: 205px;
-    }
+    max-width: 10em;
   }
 
   &__imageContainer {
@@ -135,8 +59,15 @@
     }
   }
 
-  &sContainer {
-    text-align: center;
-    width: 100%;
+  &s {
+    &__container {
+      display: inline-flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    &__content {
+      display: inline-flex;
+    }
   }
 }
