- added basic google login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
     <section class="prometheus-header__content">
 
-      <header-search></header-search>
+      <header></header>
 
     </section>
 
