--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -34,7 +34,7 @@
       </div>
       <div class="header__iconWrapper">
         <i
-          class="bi bi-person header--icon"
+          class="bi bi-person{{isLoggedIn ? '-fill' : ''}} header--icon"
           [routerLink]="['/profile']"
         ></i>
       </div>
