- added translation-service

--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -14,6 +14,9 @@
   <div>
     <h4>Hi {{activeUser?.firstName}}</h4>
 
-    <button (click)="logoutUser()">logout</button>
+    <button (click)="switchLanguage('de_DE')">{{i18n.languageDeDe}}</button>
+    <button (click)="switchLanguage('en_US')">{{i18n.languageEnUs}}</button>
+
+    <button (click)="logoutUser()">{{i18n.profileLogout}}</button>
   </div>
 </ng-template>
