--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -32,7 +32,7 @@
           [routerLink]="['/wishlist']"
         ></i>
       </div>
-      <div class="header__iconWrapper">
+      <div class="header__iconWrapper {{hasJustLoggedIn ? 'hithere' : ''}}">
         <i
           class="bi bi-person{{isLoggedIn ? '-fill' : ''}} header--icon"
           [routerLink]="['/profile']"
