--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -12,8 +12,22 @@
       color: #0dcaf0;
       height: 100%;
       width: 100%;
+
+
     }
+
+
 }
+
+.hithere {
+  animation: hithere 0.5s ease;
+}
+@keyframes hithere {
+  from, to { transform: scale(1, 1); }
+  25% { transform: scale(0.9, 1.1); }
+  50% { transform: scale(1.1, 0.9); }
+  75% { transform: scale(0.95, 1.05); }
+    }
 
 .search {
     display: inline-block;
