--- a/src/app/component/navigation/navigation.component.html
+++ b/src/app/component/navigation/navigation.component.html
@@ -1,1 +1,16 @@
-<div *ngFor="let item of navigationItems">{{item.fromId}}</div>
+
+<ng-template #navigateToAll>
+  <div *ngIf="!isActiveNavigationItemRootItem">
+    <a [routerLink]="['']">ALL</a>
+  </div>
+</ng-template>
+
+<div *ngIf="previousNavigationItem; else navigateToAll">
+  <a [routerLink]="[''].concat(getNonEmptyPathPartsOfNavigationItem(previousNavigationItem))">{{previousNavigationItem.toId}}</a>
+</div>
+
+<div>{{activeNavigationItemLabel}}</div>
+
+<div *ngFor="let item of nextNavigationItems">
+  <a [routerLink]="[''].concat(getNonEmptyPathPartsOfNavigationItem(item))">{{item.toId}}</a>
+</div>
