- connected current navigation level with item search - wishlist is now connected to current user (also added wishlist refresh) - wishlist item in header is now connected to "at least one item"

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -28,7 +28,7 @@
       </div>
       <div class="header__iconWrapper">
         <i
-          class="bi bi-heart header--icon"
+          class="bi bi-heart{{userHasAtLeastOneWishlistItem ? '-fill' : ''}} header--icon"
           [routerLink]="['/wishlist']"
         ></i>
       </div>
