--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -1,3 +1,4 @@
+@import "src/styles/animations";
 
 .header {
     &__iconWrapper {
@@ -8,26 +9,26 @@
       width: 1.2em;
     }
 
+    &__search {
+      &--icon {
+        border-radius: 50%;
+        border: 2px dashed #0dcaf0;
+        bottom: 0;
+        position: absolute;
+        height: 1em;
+        width: 1em;
+      }
+    }
+
     &--icon {
       color: #0dcaf0;
       height: 100%;
       width: 100%;
-
-
     }
-
-
 }
 
-.hithere {
-  animation: hithere 0.5s ease;
+.headerSearch {
 }
-@keyframes hithere {
-  from, to { transform: scale(1, 1); }
-  25% { transform: scale(0.9, 1.1); }
-  50% { transform: scale(1.1, 0.9); }
-  75% { transform: scale(0.95, 1.05); }
-    }
 
 .search {
     display: inline-block;
