- completed profile quick pick - active search profile for user is reset if the last selected profile does not exist anymore - added steps in profiles component

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -40,16 +40,7 @@
         ></i>
       </div>
       <div class="header__iconWrapper">
-        <div
-          class="header__search--icon"
-          [routerLink]="['/search-profile']"
-        ></div>
-
-        <div
-          *ngFor="let searchProfile of searchProfilesOfActiveUser"
-          class="header__search--icon"
-          [routerLink]="['/search-profile']"
-        ></div>
+        <search-profile-selection></search-profile-selection>
       </div>
     </div>
   </div>
