--- a/src/app/component/profile/search/search-profiles.component.scss
+++ b/src/app/component/profile/search/search-profiles.component.scss
@@ -4,6 +4,11 @@
 .profileSelectionContainer {
   background: #2d3e5e;
 
+  &__content {
+    padding: 1em;
+    margin-top: 3em;
+  }
+
   &__item {
     border: 2px solid #0dcaf0;
     border-radius: 50%;
@@ -12,10 +17,6 @@
     margin: 0.5em;
     height: 8em;
     width: 8em;
-
-    &:hover {
-      border-color: lightblue;
-    }
 
     &--new {
       border: 0;
@@ -33,7 +34,7 @@
   }
 
   &__itemWrapper {
-    border: 1px solid lightblue;
+    border: 2px solid #0dcaf0;
     border-radius: 50%;
     cursor: pointer;
     margin-bottom: 1em;
@@ -43,6 +44,10 @@
     height: 8em;
     transition: background-color 200ms linear;
     width: 8em;
+
+    &:hover {
+      border-color: lightblue;
+    }
 
     &--selected {
       background: #0dcaf0;
