--- a/src/app/component/wishlist/add-to-wishlist.component.scss
+++ b/src/app/component/wishlist/add-to-wishlist.component.scss
@@ -5,8 +5,8 @@
     border-radius: 50%;
     cursor: pointer;
     padding: 10px;
-    position: relative;
-    right: 1.5em;
-    top: -0.5em;
+    position: absolute;
+    top: -1em;
+    right: -1em;
   }
 }
