--- a/src/app/component/wishlist/wishlist-items.component.scss
+++ b/src/app/component/wishlist/wishlist-items.component.scss
@@ -1,133 +1,24 @@
 .informationItem {
-  border-bottom: solid 1px #071436;
-  display: inline-block;
-  min-height: 400px;
-  min-width: 279px;
-  padding-bottom: 28px;
-  padding-top: 28px;
-  position: relative;
-  overflow: hidden;
-  text-align: center;
-  vertical-align: top;
+  padding: 1em;
+  text-align: -webkit-center;
+  width: 20em;
 
-  @media screen and (min-width: 320px) {
-    min-width: 159px;
-  }
-
-  @media screen and (min-width: 360px) {
-    min-width: 179px;
-  }
-
-  @media screen and (min-width: 375px) {
-    min-width: 187px;
-  }
-
-  @media screen and (min-width: 411px) {
-    min-width: 205px;
-  }
-
-  @media screen and (min-width: 414px) {
-    min-width: 206px;
-  }
-
-  @media screen and (min-width: 540px) {
-    border-left: solid 1px #071436;
-    min-width: 179px;
-  }
-
-  @media screen and (min-width: 568px) {
-    min-width: 283px;
-  }
-
-  @media screen and (min-width: 592px) {
-    min-width: 295px;
-  }
-
-  @media screen and (min-width: 640px) {
-    min-width: 319px;
-  }
-
-  @media screen and (min-width: 653px) {
-    min-width: 325px;
-  }
-
-  @media screen and (min-width: 667px) {
-    min-width: 332px;
-  }
-
-  @media screen and (min-width: 720px) {
-    min-width: 239px;
-  }
-
-  @media screen and (min-width: 731px) {
-    border-left: solid 1px #071436;
-    min-width: 242px;
-  }
-
-  @media screen and (min-width: 736px) {
-    min-width: 244px;
-  }
-
-  @media screen and (min-width: 768px) {
-    min-width: 255px;
-  }
-
-  @media screen and (min-width: 812px) {
-    min-width: 269px;
-  }
-
-  @media screen and (min-width: 823px) {
-    min-width: 273px;
-  }
-
-  @media screen and (min-width: 1024px) {
-    border-bottom: unset;
-    border-left: unset;
-    min-width: 255px;
-  }
-
-  @media screen and (min-width: 1366px) {
-    min-width: 340px;
-  }
-
-  @media screen and (min-width: 1920px) {
-    min-width: 474px;
-  }
-
-  &:nth-child(even) {
-    border-left: solid 1px #071436;
-
-    @media screen and (min-width: 1024px) {
-      border-left: unset;
-    }
-  }
-
-  &:nth-child(3n+1) {
-    @media screen and (min-width: 823px) {
-      border-left: unset;
-    }
+  &__content {
+    display: flex;
+    padding-top: 4em;
   }
 
   &__contentContainer {
-    margin-top: 10px;
+    margin-top: 2em;
   }
 
   &__image {
-    border-radius: 10px;
-    max-width: 120px;
-    max-height: 192px;
-    min-width: 60px;
-
-    @media screen and (min-width: 640px) {
-      max-width: 143px;
-      max-height: 205px;
-    }
+    width: 13em;
   }
 
   &__imageContainer {
-    display: inline-flex;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    position:relative;
+    width: 13em;
 
     &:hover {
       transform: scale(1.1);
@@ -136,7 +27,8 @@
   }
 
   &sContainer {
-    text-align: center;
-    width: 100%;
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
