--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -3,17 +3,33 @@
   text-align: -webkit-center;
   width: 20em;
 
+  @media screen and (min-width: 576px) {
+    width: 13em;
+  }
+
+  @media screen and (min-width: 1140px) {
+    width: 16em;
+  }
+
   &__contentContainer {
     margin-top: 2em;
   }
 
   &__image {
-    width: 13em;
+    width: 100%;
   }
 
   &__imageContainer {
     position:relative;
-    width: 13em;
+    width: 12em;
+
+    @media screen and (min-width: 576px) {
+      width: 9em;
+    }
+
+    @media screen and (min-width: 1140px) {
+      width: 12em;
+    }
 
     &:hover {
       transform: scale(1.1);
