--- a/src/app/component/wishlist/wishlist-items.component.scss
+++ b/src/app/component/wishlist/wishlist-items.component.scss
@@ -3,6 +3,14 @@
   text-align: -webkit-center;
   width: 20em;
 
+  @media screen and (min-width: 576px) {
+    width: 13em;
+  }
+
+  @media screen and (min-width: 1140px) {
+    width: 16em;
+  }
+
   &__content {
     display: flex;
     padding-top: 4em;
@@ -13,12 +21,20 @@
   }
 
   &__image {
-    width: 13em;
+    width: 100%;
   }
 
   &__imageContainer {
     position:relative;
     width: 13em;
+
+    @media screen and (min-width: 576px) {
+      width: 9em;
+    }
+
+    @media screen and (min-width: 1140px) {
+      width: 12em;
+    }
 
     &:hover {
       transform: scale(1.1);
