- prices are now shown in overview

--- a/src/app/component/overview/items.component.html
+++ b/src/app/component/overview/items.component.html
@@ -19,7 +19,8 @@
             <app-add-to-wishlist [item]="item"></app-add-to-wishlist>
           </div>
           <div class="informationItem__contentContainer">
-            <div class="item__title">{{item.title}}</div>
+            <div class="informationItem__title">{{item.title}}</div>
+            <div class="informationItem__price">{{item.renderLowestPrice()}}</div>
           </div>
         </div>
       </div>
