--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -38,6 +38,13 @@
     }
   }
 
+  &__price {
+    background-color: #355f7d;
+    border-radius: 15px;
+    margin: 1em;
+    padding: 0.3em;
+  }
+
   &s {
     &__container {
       display: inline-flex;
