--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   min-height: 91vh;
   position: relative;
-  top: 60px;
+  top: 2.3em;
 
   &h1 {
     font-size: 2.0em;
@@ -22,7 +22,7 @@
   border-bottom: 1px solid lightblue;
   color: white;
   font-size: calc(10px + 2vmin);
-  height: 60px;
+  height: 2.3em;
   justify-content: center;
   position: fixed;
   text-align: center;
