--- a/src/app/component/navigation/navigation.component.scss
+++ b/src/app/component/navigation/navigation.component.scss
@@ -1,6 +1,6 @@
 #nextLevelButton {
 
-  height: 0px;
+  height: 0;
   opacity: 0;
   position: absolute;
 
@@ -78,7 +78,7 @@
 
   &__nextLevelSelection {
     clear:both;
-    height:0px;
+    height:0;
     overflow: hidden;
     padding-left: 0;
     position: absolute;
