- improved header layout

--- a/src/app/component/profile/search/search-profile-selection.component.scss
+++ b/src/app/component/profile/search/search-profile-selection.component.scss
@@ -38,7 +38,7 @@
       background: #355f7d;
       clear:both;
       display: inline-flex;
-      height:0px;
+      height:0;
       overflow: hidden;
       padding: 0;
       position: relative;
