- improved header layout

--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -100,7 +100,7 @@
     &Back {
       display: inline-flex;
       height: 8vh;
-      justify-content: end;
+      justify-content: flex-end;
 
       &--icon {
         height: 70%;
