--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -23,7 +23,7 @@
       <div class="header__iconWrapper">
         <i
           class="bi bi-search header--icon"
-          (click)="isSearchFieldActive = true"
+          (click)="activateSearch()"
         ></i>
       </div>
 
