--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -12,6 +12,7 @@
     <div class="col-5 col-md-7">
       <input
         #searchPattern
+        autofocus
         tabIndex="0"
         type="text"
         class="searchContainer {{isSearchFieldActive ? 'searchContainer__inputField' : 'searchContainer__inputField--inactive'}}"
