- added placeholder for search field

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -16,6 +16,7 @@
         tabIndex="0"
         type="text"
         class="searchContainer {{isSearchFieldActive ? 'searchContainer__inputField' : 'searchContainer__inputField--inactive'}}"
+        placeholder="{{'iAmSearchingFor'|translate}}"
         [formControl]="searchPatternControl"
       />
     </div>
