- added intermediate logo

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -2,6 +2,9 @@
   <div class="row">
 
     <div class="col-3 col-md-2 searchContainer__back">
+      <a href="/">
+        <img src="assets/images/pLogo.png" class="header__logo" style=""/>
+      </a>
       <div class="header__iconWrapper {{ isSearchFieldActive ? 'searchContainer__inputFieldBack' : 'searchContainer__inputFieldBack--inactive' }}">
         <i
           class="bi bi-arrow-left header--icon"
