- improved item size

--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -16,8 +16,8 @@
   }
 
   &__image {
-    border-radius: 18px;
-    width: 100%;
+    border-radius: 0.5em;
+    max-height: 14em;
   }
 
   &__imageContainer {
