--- a/src/app/component/wishlist/wishlist-items.component.scss
+++ b/src/app/component/wishlist/wishlist-items.component.scss
@@ -21,8 +21,8 @@
   }
 
   &__image {
-    border-radius: 18px;
-    width: 100%;
+    border-radius: 0.5em;
+    max-height: 14em;
   }
 
   &__imageContainer {
