--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -1,5 +1,9 @@
 .informationItem {
-  padding: 1em;
+  background-color: rgba(7, 80, 97, .25);
+  border-radius: 0.5em;
+  font-size: 0.85em;
+  padding: 2em;
+  margin: 0.5em;
   text-align: -webkit-center;
   width: 20em;
 
@@ -16,7 +20,6 @@
   }
 
   &__image {
-    border-radius: 0.5em;
     max-height: 14em;
     max-width: 100%;
   }
@@ -45,6 +48,10 @@
     border-radius: 15px;
     margin: 1em;
     padding: 0.3em;
+  }
+
+  &__title {
+    min-height: 6em;
   }
 
   &s {
