- improved item presentation

--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -51,7 +51,13 @@
   }
 
   &__title {
+    display: -webkit-box;
+    line-clamp: 4;
     min-height: 6em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
   }
 
   &s {
